# Gitsoo

./: HowToDo_1.0.txt  README.md  i2-Indexer  i2-Main  i2-Searcher  i2-Spider  i2-gitsoo.arch  i2-gitsoo.requirements
QueryPro/: Configure  Configure.cpp  Configure.h  HowToDo_1.0.txt  Listen.cpp  Listen.h  Main.cpp  Process.h  Query.conf
QueryPro/core/: gitsoo.c  gitsoo.h  search.c  token.c  util.c  util.h
QueryPro/trunk/: gitsoo.c  gitsoo.h  search.c  search.h  token.c  token.h  util.c
SavePro/: HowToDo_1.0.txt
SavePro/Example/: data_small.txt
SavePro/src/com/: InvertedIndex.java  (+5 more)
SpiderPro/: HowToDo_1.0.txt  README.md
SpiderPro/Spider/: Spider.conf  Spider.conf~
SpiderPro/Spider_jar/: Readme.md
SpiderPro/jsonToMySQL/: jsonToMySQL.conf
Web/: HowToDo_1.0.txt
Web/Search/: HowToDo_1.0.txt
engine/Indexer/: CHashAlgo.cpp  README.md  SolveData.cpp  SolveData.h  invertNode.h  invertTable.h  util.h
engine/Main/: main
engine/Searcher/: CMakeLists.txt  Makefile  demo  searcher  searcher.cpp  searcher.h  test.cpp
engine/Searcher/demo.dSYM/Contents/Resources/DWARF/: demo
engine/Searcher/searcher.dSYM/Contents/: Info.plist
engine/Tokenizer/: demo
gitsoo_DIY/: i2-Spider  i2-Tokenizer  i2-gitsoo.arch
gitsoo_academic/: .gitignore  .project  README.md
gitsoo_academic/engine/: .classpath  pom.xml
gitsoo_terminal/: Makefile  README.md  database.c  database.h  gitsoo.c  gitsoo.h  postings.c  postings.h  search.c  search.h  token.c  token.h  util.c  util.h  wikiload.c  wikiload.h
spider/: README.md
spider/SpiderCore/: Spider.conf
types/: types.h
(+41 files in other folders)
